--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -6,9 +6,17 @@ spring:
     mongodb:
       uri: ${MONGODB_URI:mongodb://mongo:27017/studymate}
     redis:
-      host: ${REDIS_HOST:redis}
-      port: ${REDIS_PORT:6379}
-      database: ${REDIS_DATABASE:1}
+      url: ${REDIS_URL}
+      timeout: 5000
+      ssl:
+        enabled: true
+      lettuce:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 0
+          max-wait: -1ms
+
 
 jwt:
   secret: ${JWT_SECRET:my-super-secret-key-which-is-long}
