--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,9 @@ java {
 		languageVersion = JavaLanguageVersion.of(21)
 	}
 }
-
+ext {
+	flywayVersion = "10.15.0"
+}
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -32,7 +34,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
-
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation "org.flywaydb:flyway-core:${flywayVersion}"
+	implementation "org.flywaydb:flyway-database-postgresql:${flywayVersion}"
+	runtimeOnly 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
