--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -9,8 +9,33 @@ spring:
       url: ${REDIS_URL}
       timeout: 5000
 
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: ${DATABASE_URL:jdbc:postgresql://postgres:5432/studymate}
+    username: ${DATABASE_USERNAME:postgres}
+    password: ${DATABASE_PASSWORD:postgres}
 
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 jwt:
   secret: ${JWT_SECRET:my-super-secret-key-which-is-long}
   expiration: ${JWT_EXPIRATION:3600000}
+
+logging:
+  level:
+    com.portal.studymate: INFO
+    com.portal.studymate.auth: INFO
+    com.portal.studymate.user: INFO
+    com.portal.studymate.common.jwt: INFO
+    org.springframework.security: WARN
+    root: INFO
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
